@@ -1,3 +1,9 @@
+2003-06-02  Ross Burton  <ross@burtonini.com>
+
+	* configure.in:
+	* src/sj-extractor.c:
+	Try and handle lame/mpegaudio encoders, selecting the right one.
+
 2003-05-30  Abel Cheung  <maddog@linux.org.hk>
 
 	* configure.in: Added zh_TW to ALL_LINGUAS.
